--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel = "icon" href = "images/icon.jpg" 
+		<link rel = "icon" href = "images/icon.png" 
         type = "image/x-icon">
 		<title>The maze runner</title>
 		<script type="text/javascript">
