--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
        
 				<div class="button">
 					<button onclick="animation();">GO</button>
-					<button id="button2" onclick="refreshPage();">AGAIN</button>
+					<button id="button2" onclick="refreshPage();">RESET</button>
 				</div> 
 				</div>
 		
 		<audio 
 		id="myAudio" src="audio/Runner.mp3	" preload="auto">
 		</audio>
-		
-		<input type="button" id="button1" value="sound" onclick="togglePlay()" />
+	
+		<input type="checkbox" id="button1" class="toggle-button" value="sound" onclick="togglePlay()">
+
   <script src="js/maze.js"></script>
   <script src="js/sweetaleart.js"></script> 
   <script src="js/sweetaleartcode.js"></script> 
